# ProjetCode

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Position.h  ProjetConfig.h.in  ProjetMain.cpp  cmake_install.cmake
Step1_build/: CMakeCache.txt  Makefile  ProjetCode  ProjetConfig.h  cmake_install.cmake
Step1_build/lib/: Makefile  cmake_install.cmake
lib/: CMakeLists.txt  Champion.cpp  Champion.h  Color.cpp  Color.h  Fight.cpp  Fight.h  FightParser.cpp  FightParser.h  Leona.cpp  Leona.h  Position.cpp  Position.h  Spell.cpp  Spell.h  Stats.cpp  Stats.h  Team.cpp  Team.h
